--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		</div>
 		<div class="col-lg-6">
-			<img src="img/bootstrap2.png" class="img-fluid">
+			<img src="img/group.jpg" class="img-fluid">
 		</div>
 	</div>
 	<hr class="my-4">
