--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<p>We know that greatness in a disruptive era requires bold
 				ambition, curious talent and a culture that believes we're
 			    smarter together.</p>
-			<p>We approach every challenge hostically, with best-in-class
+			<p>We approach every challenge holistically, with best-in-class
 				expertise in data, creativity, media, technology, search, social and
 				more. We call this Alchemy. It has the power to build our clients'
 				brands and transform their business. And white it may seem like
